--- a/WebsiteCKC/WebsiteCKC.csproj
+++ b/WebsiteCKC/WebsiteCKC.csproj
@@ -308,6 +308,9 @@
     <Content Include="Views\Admin\ControlPanel.cshtml" />
     <Content Include="Views\Admin\Competition.cshtml" />
     <Content Include="Views\Shared\_ConfigCompetitionTable.cshtml" />
+    <Content Include="Views\Shared\_LatestNews.cshtml" />
+    <Content Include="Views\Shared\_LastPlayedMatch.cshtml" />
+    <Content Include="Views\Shared\_LatestResults.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
